# zoi

./: .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Justfile  Makefile  PACKAGING.md  README.md  RELEASE.md  SECURITY.md  about.toml  build.rs  cliff.toml  configure  deny.toml  gct.yaml  renovate.json  zoi.lua  zoi.yaml
.github/ISSUE_TEMPLATE/: Bug Report.md  Enhancement Request.md  Feature Request.md
.gitlab/issue_templates/: Bug Report.md  Enhancement Request.md  Feature Request.md
app/: install.ps1  install.sh  install.zsm  zm.ps1  zm.sh
crates/audit/: Cargo.toml
crates/audit/src/: lib.rs
crates/cli/: Cargo.toml  build.rs
crates/cli/src/: cli.rs  lib.rs  main.rs  utils.rs
crates/cli/src/cmd/: audit.rs  autoremove.rs  cache.rs  clean.rs  clone.rs  complete.rs  create.rs  dev.rs  doctor.rs  downgrade.rs  download.rs  env.rs  exec.rs  extension.rs  files.rs  gen_man.rs  helper.rs  history.rs  home.rs  info.rs  install.rs  installed_select.rs  list.rs  man.rs  mark.rs  migrate.rs  mod.rs  owner.rs  pgp.rs  pin.rs  registry.rs  repo.rs  rollback.rs  run.rs  search.rs  service.rs  shell.rs  show.rs  sync.rs  system.rs  (+11 more)
crates/cli/src/cmd/package/: build.rs  bundle.rs  doctor.rs  init_lsp.rs  inspect.rs  install.rs  mod.rs  test.rs
crates/cli/src/pkg/: helper.rs  merge.rs  mod.rs  repo_install.rs
crates/cli/src/pkg/package/: mod.rs  test.rs
crates/core/: Cargo.toml  build.rs
crates/core/src/: cache.rs  config.rs  dependency.rs  frozen.rs  hash.rs  lib.rs  lock.rs  offline.rs  pgp.rs  pin.rs  pkgdir.rs  recorder.rs  sysroot.rs  types.rs  upgrade.rs  utils.rs
crates/core/src/builtin/hooks/: font-cache.hook.yaml  ldconfig.hook.yaml
crates/core/src/builtin/lsp/: zoi.lua
crates/core/src/builtin/pgp/: zillowez.asc
crates/daemon/: Cargo.toml  zoid.service
crates/daemon/src/: main.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs
crates/dependencies/: Cargo.toml  build.rs
crates/dependencies/src/: lib.rs
crates/hooks/: Cargo.toml  build.rs
crates/hooks/src/: global.rs  lib.rs
crates/install/: Cargo.toml
crates/install/src/: create.rs  dep_install.rs  exec.rs  installer.rs  lib.rs  lockfile.rs  manifest.rs  mod.rs  pkg_install.rs  plan.rs  post_install.rs  prebuilt.rs  pubgrub.rs  resolver.rs  service.rs  shim.rs  util.rs
crates/lua/: Cargo.toml
crates/lua/src/: functions.rs  parser.rs
crates/lua/src/api/: archive.rs  crypto.rs  fs.rs  http.rs  lifecycle.rs  parse.rs  system.rs
crates/mini/: Cargo.toml
crates/mini/src/: main.rs  mini_resolve.rs
crates/package/: Cargo.toml
crates/package/src/: build.rs  bundle.rs  bwrap.rs  docker.rs  doctor.rs  doctor_system.rs  init_lsp.rs  lib.rs  pool.rs  registry.rs  relocate.rs
crates/package/src/builtin/lsp/: zoi.lua
crates/plugins/: Cargo.toml
crates/plugins/src/: extension.rs  lib.rs
crates/pm/: Cargo.toml
crates/pm/src/: lib.rs
crates/project/: Cargo.toml
crates/project/src/: config.rs  environment.rs  executor.rs  lib.rs  lockfile.rs  lua_config.rs  runner.rs  verify.rs
crates/purl/: Cargo.toml
crates/purl/src/: lib.rs
crates/resolver/: Cargo.toml
crates/resolver/src/: lib.rs  local.rs  mini_resolve.rs  resolve.rs
crates/sandbox/: Cargo.toml
crates/sandbox/src/: lib.rs
crates/sync/: Cargo.toml
crates/sync/src/: lib.rs
crates/system/: Cargo.toml
crates/system/src/: boot.rs  client.rs  config.rs  distro.rs  early_boot.rs  generation.rs  home.rs  lib.rs  mount.rs  protocol.rs  secret.rs  selinux.rs  service.rs
crates/system/tests/: distro.rs  generation.rs  guard.rs  parsing.rs
crates/telemetry/: Cargo.toml
crates/telemetry/src/: lib.rs
crates/tests/: Cargo.toml
crates/tests/src/: lib.rs
crates/tests/tests/: atomic_shims.rs  audit.rs  backup.rs  bwrap.rs  cli.rs  config.rs  dependency_detection.rs  dependency_resolution.rs  doctor.rs  ephemeral.rs  extensions.rs  fakeroot.rs  frozen_lockfile.rs  helper.rs  hooks.rs  install_scoping.rs  integration.rs  local_install_resolution.rs  man.rs  merge_3way.rs  offline.rs  package_parsing.rs  policy.rs  project_config.rs  project_workflows.rs  provides.rs  purl.rs  registry.rs  relocation.rs  resolution.rs  revision.rs  rollback.rs  rollback_shim.rs  sandbox.rs  security_advisories.rs  service.rs  shims.rs  split_packages.rs  sysroot.rs  task_runner.rs  (+10 more)
crates/tests/tests/assets/: advisories.json  packages.json  registries.json  repo.yaml  test.pkg.lua  test_channels.pkg.lua  test_deps.pkg.lua  test_no_stable.pkg.lua  test_sub_packages.pkg.lua
crates/tests/tests/assets/source_a/: shared.pkg.lua
crates/tests/tests/assets/source_b/: shared.pkg.lua
crates/transaction/: Cargo.toml
crates/transaction/src/: lib.rs  rollback.rs
crates/uninstall/: Cargo.toml
crates/uninstall/src/: autoremove.rs  lib.rs
crates/zoi-rs/: Cargo.toml
crates/zoi-rs/src/: lib.rs  main.rs
docs/: comparisons.mdx  config.mdx  creating-packages.mdx  dependencies.mdx  examples.mdx  extensions.mdx  features.mdx  index.mdx  lua-api-cookbook.mdx  lua-api.mdx  lua-plugin-api.mdx  meta.json  migrate.mdx  packaging.mdx  project-config.mdx  publishing-packages.mdx  quick-start.mdx  registry.mdx  repositories.mdx  specs.mdx  telemetry.mdx  zoidberg-guidelines.mdx  zoidberg.mdx  zoios.mdx
docs/guides/: backup-restore.mdx  cicd.mdx  config-merging.mdx  ephemeral-environments.mdx  fonts.mdx  ghostty.mdx  home-lua.mdx  index.mdx  library-packaging.mdx  manuals.mdx  (+11 more)
scripts/: archive.sh  build-linux.sh  build-macos.sh  build-release.ps1  build-release.sh  build.sh  deb-package.sh  linux-amd64.sh  linux-arm64.sh  macos-amd64.sh  macos-arm64.sh  packages.sh  rpm-package.sh  windows-amd64.sh
src/: cli.rs  lib.rs  main.rs  utils.rs
tests/: audit.rs  cli.rs  config.rs  conflicts.rs  db_collision.rs  dependency_types.rs  ephemeral.rs  external_managers.rs  frozen_lockfile.rs  integration.rs  mini.rs  package_doctor.rs  plugins.rs  purl.rs  rollback.rs  rollback_shim.rs  security.rs  service.rs  shell_hooks.rs  shims.rs  tool_versions.rs  transactions.rs  uninstall.rs
(+91 files in other folders)
