[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/cli",
    "crates/mini",
    "crates/purl",
    "crates/resolver",
    "crates/lua",
    "crates/hooks",
    "crates/sandbox",
    "crates/telemetry",
    "crates/project",
    "crates/db",
    "crates/audit",
    "crates/pm",
    "crates/dependencies",
    "crates/install",
    "crates/package",
    "crates/sync",
    "crates/uninstall",
    "crates/transaction",
    "crates/plugins",
    "crates/tests",
    "crates/zoi-rs",
]
default-members = ["crates/zoi-rs"]

[workspace.package]
version = "1.19.0-pub"
edition = "2024"
rust-version = "1.92.0"
description = "Advanced Package Manager & Environment Orchestrator"
license = "Apache-2.0"
repository = "https://gitlab.com/zillowe/zillwen/zusty/zoi"
homepage = "https://zillowe.qzz.io/zds/zoi"
documentation = "https://docs.rs/zoi-rs/latest/zoi"
keywords = ["cli", "package-manager", "dev-tools", "universal", "environment"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.103"
chrono = { version = "0.4.45", features = ["serde"] }
clap = { version = "4.6.1", features = ["derive", "color"] }
clap_complete = "4.6.5"
clap_mangen = "0.3.0"
colored = "3.1.1"
comfy-table = "7.2.2"
crossterm = "0.29.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
flate2 = "1.1.9"
fs2 = "0.4.3"
git2 = { version = "0.21.0", features = ["https", "vendored-openssl"] }
hex = "0.4.3"
home = "0.5.12"
indicatif = "0.18.4"
junction = "2.0.0"
md5 = "0.8.0"
mlua = { version = "0.11.6", features = ["luau", "serde"] }
nix = { version = "0.31.3", features = ["user", "fs"] }
openssl = { version = "0.10.81", features = ["vendored"] }
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = { version = "0.30.2", features = ["crossterm"] }
rayon = "1.12.0"
regex = "1.12.4"
reqwest = { version = "0.13.4", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
self_update = "0.44.0"
semver = "1.0.28"
sequoia-openpgp = { version = "2.3.0", default-features = false, features = [
    "crypto-openssl",
] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
serde_yaml = "0.9.34"
sha2 = "0.11.0"
spdx = "0.13.4"
syntect = "5.3.0"
tar = "0.4.46"
tempfile = "3.27.0"
toml = "1.1.2"
urlencoding = "2.1.3"
uuid = { version = "1.23.4", features = ["v7"] }
walkdir = "2.5.0"
winapi = { version = "0.3.9", features = ["securitybaseapi", "winnt"] }
xz2 = "0.1.7"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
zstd = "0.13.3"
ar = "0.9.0"
sevenz-rust = "0.6.1"
phf = "0.14.0"
rusqlite = { version = "0.40.1", features = ["bundled"] }
glob = "0.3.3"
pubgrub = "0.4.0"
thiserror = "2.0.18"
rustc-hash = "2.1.2"
json5 = "1.3.1"
purl = "0.1.6"
dotenvy = "0.15.7"
phf_codegen = "0.14.0"

zoi-core = { path = "crates/core" }
zoi-hooks = { path = "crates/hooks" }
zoi-lua = { path = "crates/lua" }
zoi-purl = { path = "crates/purl" }
zoi-resolver = { path = "crates/resolver" }
zoi-sandbox = { path = "crates/sandbox" }
zoi-telemetry = { path = "crates/telemetry" }
zoi-project = { path = "crates/project" }
zoi-cli = { path = "crates/cli" }
zoi-db = { path = "crates/db" }
zoi-audit = { path = "crates/audit" }
zoi-pm = { path = "crates/pm" }
zoi-deps = { path = "crates/dependencies" }
zoi-install = { path = "crates/install" }
zoi-package = { path = "crates/package" }
zoi-sync = { path = "crates/sync" }
zoi-uninstall = { path = "crates/uninstall" }
zoi-transaction = { path = "crates/transaction" }
zoi-plugins = { path = "crates/plugins" }
zoi-rs = { path = "crates/zoi-rs" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.dependencies.winreg]
version = "0.56.0"
