[workspace]
resolver = "3"
members = [
    "crates/core",
    "crates/cli",
    "crates/mini",
    "crates/purl",
    "crates/resolver",
    "crates/lua",
    "crates/hooks",
    "crates/sandbox",
    "crates/telemetry",
    "crates/project",
    "crates/db",
    "crates/audit",
    "crates/pm",
    "crates/dependencies",
    "crates/install",
    "crates/package",
    "crates/sync",
    "crates/uninstall",
    "crates/transaction",
    "crates/plugins",
    "crates/daemon",
    "crates/system",
    "crates/tests",
    "crates/zoi-rs",
]
default-members = ["crates/zoi-rs", "crates/mini"]

[workspace.package]
version = "1.24.0"
edition = "2024"
rust-version = "1.92.0"
description = "Advanced Package Manager & Environment Orchestrator"
license = "Apache-2.0"
repository = "https://gitlab.com/zillowe/zillwen/zusty/zoi"
homepage = "https://zillowe.qzz.io/zds/zoi"
documentation = "https://docs.rs/zoi-rs/latest/zoi"
keywords = ["cli", "package-manager", "dev-tools", "universal", "environment"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
anyhow = "1.0.104"
elb = "0.4.0"
chrono = { version = "0.4.45", default-features = false, features = [
    "serde",
    "clock",
    "std",
] }
clap = { version = "4.6.4", features = ["derive", "color"] }
clap_complete = "4.6.7"
clap_mangen = "0.3.0"
colored = "3.1.1"
comfy-table = "7.2.2"
crossterm = "0.29.0"
dialoguer = "0.12.0"
dirs = "6.0.0"
flate2 = "1.1.9"
fs2 = "0.4.3"
git2 = { version = "0.21.0", default-features = false, features = [
    "https",
    "vendored-openssl",
] }
hex = "0.4.3"
home = "0.5.12"
indicatif = "0.18.6"
junction = "2.0.0"
mlua = { version = "0.12.0", default-features = false, features = [
    "luau",
    "serde",
] }
nix = { version = "0.31.3", default-features = false, features = [
    "user",
    "fs",
    "signal",
    "process",
] }
openssl = { version = "0.10.81", default-features = false, features = [
    "vendored",
] }
pulldown-cmark = { version = "0.13.4", default-features = false }
ratatui = { version = "0.30.2", default-features = false, features = [
    "crossterm",
] }
rayon = "1.12.0"
regex = "1.13.1"
reqwest = { version = "0.13.4", default-features = false, features = [
    "blocking",
    "json",
    "rustls",
] }
self_update = "0.44.0"
semver = "1.0.28"
sequoia-openpgp = { version = "2.4.1", default-features = false, features = [
    "crypto-openssl",
] }
serde = { version = "1.0.228", default-features = false, features = ["derive"] }
serde_json = "1.0.151"
serde_yaml = { package = "yaml_serde", version = "0.10.4" }
sha2 = "0.11.0"
bsdiff = "0.2.1"
spdx = "0.13.4"
syntect = "5.3.0"
tar = { version = "0.4.46", features = ["xattr"] }
tempfile = "3.27.0"
toml = "1.1.3"
urlencoding = "2.1.3"
uuid = { version = "1.24.0", default-features = false, features = ["v7"] }
walkdir = "2.5.0"
winapi = { version = "0.3.9", default-features = false, features = [
    "securitybaseapi",
    "winnt",
] }
xz2 = "0.1.7"
zip = { version = "8.6.0", default-features = false, features = ["deflate"] }
zstd = "0.13.3"
ar = "0.9.0"
sevenz-rust = "0.6.1"
phf = "0.14.0"
rusqlite = { version = "0.40.1", default-features = false, features = [
    "bundled",
] }
glob = "0.3.4"
pubgrub = "0.4.0"
thiserror = "2.0.19"
rustc-hash = "2.1.3"
json5 = "1.3.1"
purl = "0.1.6"
dotenvy = "0.15.7"
phf_codegen = "0.14.0"
diffy = "0.5.0"
ignore = "0.4.31"
aes-gcm = "0.11.0"
rand = { version = "0.10.2", features = ["std", "thread_rng", "sys_rng"] }
getrandom = "0.4.3"
argon2 = "0.5.3"
base64 = "0.22.1"

zoi-core = { path = "crates/core", version = "1.24.0" }
zoi-hooks = { path = "crates/hooks", version = "1.24.0" }
zoi-lua = { path = "crates/lua", version = "1.24.0" }
zoi-purl = { path = "crates/purl", version = "1.24.0" }
zoi-resolver = { path = "crates/resolver", version = "1.24.0" }
zoi-sandbox = { path = "crates/sandbox", version = "1.24.0" }
zoi-telemetry = { path = "crates/telemetry", version = "1.24.0" }
zoi-project = { path = "crates/project", version = "1.24.0" }
zoi-cli = { path = "crates/cli", version = "1.24.0" }
zoi-db = { path = "crates/db", version = "1.24.0" }
zoi-audit = { path = "crates/audit", version = "1.24.0" }
zoi-pm = { path = "crates/pm", version = "1.24.0" }
zoi-deps = { path = "crates/dependencies", version = "1.24.0" }
zoi-install = { path = "crates/install", version = "1.24.0" }
zoi-package = { path = "crates/package", version = "1.24.0" }
zoi-sync = { path = "crates/sync", version = "1.24.0" }
zoi-uninstall = { path = "crates/uninstall", version = "1.24.0" }
zoi-transaction = { path = "crates/transaction", version = "1.24.0" }
zoi-plugins = { path = "crates/plugins", version = "1.24.0" }
zoi-daemon = { path = "crates/daemon", version = "1.24.0" }
zoi-system = { path = "crates/system", version = "1.24.0" }
zoi = { path = "crates/zoi-rs", version = "1.24.0", package = "zoi-rs" }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"

[workspace.dependencies.winreg]
version = "0.56.0"
