[package]
name = "zoi-audit"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "zoi_audit"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
hex.workspace = true
home.workspace = true
serde.workspace = true
serde_json.workspace = true
sha2.workspace = true
zoi-core.workspace = true
