[package]
name = "zoi-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "zoi_cli"

[build-dependencies]
dotenvy.workspace = true

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
clap.workspace = true
clap_complete.workspace = true
clap_mangen.workspace = true
colored.workspace = true
comfy-table.workspace = true
crossterm.workspace = true
dialoguer.workspace = true
dirs.workspace = true
fs2.workspace = true
hex.workspace = true
home.workspace = true
indicatif.workspace = true
mlua.workspace = true
nix.workspace = true
pulldown-cmark.workspace = true
ratatui.workspace = true
rayon.workspace = true
reqwest.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
spdx.workspace = true
syntect.workspace = true
tempfile.workspace = true
walkdir.workspace = true
json5.workspace = true
zoi-audit.workspace = true
zoi-core.workspace = true
zoi-deps.workspace = true
zoi-install.workspace = true
zoi-package.workspace = true
zoi-db.workspace = true
zoi-hooks.workspace = true
zoi-project.workspace = true
zoi-lua.workspace = true
zoi-purl.workspace = true
zoi-resolver.workspace = true
zoi-sandbox.workspace = true
zoi-telemetry.workspace = true
zoi-sync.workspace = true
zoi-uninstall.workspace = true
zoi-transaction.workspace = true
zoi-plugins.workspace = true

[target.'cfg(windows)'.dependencies]
winapi = { workspace = true, features = ["securitybaseapi", "winnt"] }
winreg.workspace = true

