[package]
name = "zoi-db"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "zoi_db"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
rusqlite.workspace = true
serde_json.workspace = true
zoi-core.workspace = true
zoi-resolver.workspace = true
