[package]
name = "zoi-lua"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "zoi_lua"

[lints]
workspace = true

[dependencies]
zoi-core.workspace = true
anyhow.workspace = true
ar.workspace = true
colored.workspace = true
flate2.workspace = true
home.workspace = true
mlua.workspace = true
regex.workspace = true
sequoia-openpgp.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sevenz-rust.workspace = true
tar.workspace = true
toml.workspace = true
urlencoding.workspace = true
walkdir.workspace = true
xz2.workspace = true
zip.workspace = true
zstd.workspace = true
