[package]
name = "zoi-mini"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "zoi-mini"
path = "src/main.rs"

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
semver.workspace = true
zoi-cli = { path = "../cli" }
zoi-core.workspace = true
zoi-resolver.workspace = true
