[package]
name = "zoi-mini"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[[bin]]
name = "zoi-mini"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap = { workspace = true, features = ["derive"] }
colored.workspace = true
zoi-cli.workspace = true
zoi-core.workspace = true
zoi-resolver.workspace = true
