[package]
name = "zoi-package"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "zoi_package"

[lints]
workspace = true

[dependencies]
zoi-core.workspace = true
zoi-deps.workspace = true
zoi-lua.workspace = true
zoi-resolver.workspace = true
anyhow.workspace = true
colored.workspace = true
mlua.workspace = true
regex.workspace = true
tar.workspace = true
tempfile.workspace = true
walkdir.workspace = true
zstd.workspace = true
home.workspace = true
serde_json.workspace = true
chrono.workspace = true
hex.workspace = true
rayon.workspace = true
serde_yaml.workspace = true
zoi-purl.workspace = true
