[package]
name = "zoi-plugins"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "zoi_plugins"

[dependencies]
anyhow.workspace = true
colored.workspace = true
comfy-table.workspace = true
dialoguer.workspace = true
flate2.workspace = true
hex.workspace = true
home.workspace = true
mlua.workspace = true
reqwest.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
tar.workspace = true
xz2.workspace = true
zip.workspace = true
zstd.workspace = true
zoi-core.workspace = true
zoi-hooks.workspace = true
zoi-project.workspace = true
zoi-lua.workspace = true
zoi-resolver.workspace = true
