[package]
name = "zoi-pm"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[package.metadata.cargo-machete]
ignored = ["phf", "phf_codegen", "serde", "serde_json"]

[lints]
workspace = true

[dependencies]
phf.workspace = true

[build-dependencies]
serde.workspace = true
serde_json.workspace = true
phf_codegen.workspace = true
