[package]
name = "zoi-project"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "zoi_project"

[dependencies]
anyhow.workspace = true
clap_complete.workspace = true
colored.workspace = true
dialoguer.workspace = true
glob.workspace = true
hex.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
zoi-core.workspace = true
zoi-resolver.workspace = true
