[package]
name = "zoi-project"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "zoi_project"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
clap_complete.workspace = true
colored.workspace = true
dialoguer.workspace = true
glob.workspace = true
hex.workspace = true
rayon.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
zoi-core.workspace = true
zoi-resolver.workspace = true
mlua = { workspace = true, features = ["luau", "serde"] }
indicatif.workspace = true
