[package]
name = "zoi-purl"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "zoi_purl"

[dependencies]
zoi-core.workspace = true
anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
purl.workspace = true
