[package]
name = "zoi-resolver"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "zoi_resolver"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
colored.workspace = true
comfy-table.workspace = true
dialoguer.workspace = true
git2.workspace = true
hex.workspace = true
home.workspace = true
indicatif.workspace = true
rayon.workspace = true
regex.workspace = true
semver.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
walkdir.workspace = true
zoi-core.workspace = true
zoi-lua.workspace = true
