[package]
name = "zoi-sandbox"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "zoi_sandbox"

[dependencies]
zoi-core.workspace = true
anyhow.workspace = true
home.workspace = true
