[package]
name = "zoi-transaction"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "zoi_transaction"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
chrono.workspace = true
colored.workspace = true
home.workspace = true
semver.workspace = true
serde_yaml.workspace = true
serde_json.workspace = true
uuid.workspace = true
zoi-audit.workspace = true
zoi-core.workspace = true
zoi-install.workspace = true
zoi-resolver.workspace = true
zoi-uninstall.workspace = true
