[package]
name = "zoi-uninstall"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
documentation.workspace = true
keywords.workspace = true
categories.workspace = true

[lib]
name = "zoi_uninstall"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
colored.workspace = true
home.workspace = true
mlua.workspace = true
serde_json.workspace = true
tempfile.workspace = true
zoi-core.workspace = true
zoi-deps.workspace = true
zoi-db.workspace = true
zoi-hooks.workspace = true
zoi-lua.workspace = true
zoi-resolver.workspace = true
zoi-telemetry.workspace = true
