[package]
name = "zoi-rs"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description.workspace = true
repository.workspace = true
homepage.workspace = true

[lib]
name = "zoi"
path = "src/lib.rs"

[[bin]]
name = "zoi"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow.workspace = true
colored.workspace = true
zoi-cli.workspace = true
zoi-deps.workspace = true
zoi-core.workspace = true
zoi-uninstall.workspace = true
zoi-install.workspace = true
zoi-resolver.workspace = true
zoi-package.workspace = true
zoi-plugins.workspace = true

[package.metadata.deb]
name = "zoi"
maintainer = "Zillowe Foundation <contact@zillowe.qzz.io>"
copyright = "2026 Zillowe"
license-file = ["../../LICENSE", "4"]
depends = "$auto, git"
section = "utils"
priority = "optional"
assets = [
  { source = "../../target/release/zoi", dest = "/usr/bin/zoi", mode = "755" },
  { source = "../../README.md", dest = "/usr/share/doc/zoi/README.md", mode = "644" },
]

[package.metadata.generate-rpm]
name = "zoi"
assets = [
  { source = "../../target/release/zoi", dest = "/usr/bin/zoi", mode = "755" },
  { source = "../../README.md", dest = "/usr/share/doc/zoi/README.md", mode = "644", doc = true },
  { source = "../../LICENSE", dest = "/usr/share/licenses/zoi/LICENSE", mode = "644", doc = true },
]
